# cipherfiles-backend

./: .env.example  .gitignore  Cargo.toml  Config.toml  Config.toml.example  README  README.md
.github/workflows/: general.yml
migrations/: 20240417005647_uploads_table.sql  20240419190330_stats_table.sql  20240419190535_populate_data.sql
src/: config.rs  delete.rs  download.rs  errors.rs  extractors.rs  info.rs  instrumentation.rs  main.rs  models.rs  repository.rs  stats.rs  upload.rs  utilities.rs
src/routes/: delete.rs  download.rs  info.rs  mod.rs  preview.rs  stats.rs  upload.rs
src/tests/: mod.rs  uploads.rs
src/tests/storage/: basic_ec
