[package]
name = "cipherfiles-backend"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37", features = ["rt-multi-thread", "net", "signal"] }
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"
axum = { version = "0.7", features = ["multipart"] }
tower-http = { version = "0.5", features = ["timeout", "limit", "cors", "trace"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres", "chrono"] }
sha256 = "1.5"
chacha20poly1305 = { version = "0.10", features = ["stream"] }
hex = "0.4"
nanoid = "0.4"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dotenvy_macro = "0.15"
chrono = { version = "0.4", features = ["serde"] }
num-ordinal = "0.2"
anyhow = "1.0"

tracing = "0.1"
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
axum-test = "14.8"
tower = { version = "0.4", features = ["util"] }
